# pyGIMLi

./: .gitattributes  .gitignore  .pylintrc  .ruff.toml  .workflow.sh  AUTHORS.md  CHANGELOG.md  CITATION.md  CMakeLists.txt  INSTALLATION.md  PULL_REQUEST_TEMPLATE.md  README.md  dev_requirements.txt  environment.yml  gimli.code-workspace  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature-request.yml  question.yml
.github/workflows/: main.yml
binder/: apt.txt  postBuild  requirements.txt
core/cmake/: Findcastxml.cmake  GIMLImacros.cmake
core/pgcore/: CMakeLists.txt  setup.py.in
core/python/: CMakeLists.txt  custom_rvalue.cpp  explicit_instances.cpp  generate_pygimli_code.py  hand_made_wrappers.py  pygimli.h  tuples.hpp
core/scripts/: buildThirdParty.sh  jenkins-nf.sh  workflow.sh
core/scripts/matlab/: README.TXT
core/src/: CMakeLists.txt  datacontainer.cpp  elementmatrix.cpp  elementmatrix.h  elementmatrixmap.cpp  elementmatrixmap.h  gimli.h  interpolate.cpp  interpolate.h  linSolver.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  mesh_io.cpp  pos.cpp  pos.h  regionManager.cpp  sparsematrix.h  stopwatch.h  trans.h  utils.h  vector.cpp  vector.h
core/src/bert/: bertDataContainer.h  dcfemmodelling.cpp
doc/: BUILD_LINUX.md  BUILD_LINUX.rst  BUILD_MAC.md  BUILD_WIN.md  CMakeLists.txt  Makefile  bib2html.py  compilation.md  compilation.rst  conf.py  design.rst  doxyfile.in  gimlisoftware.bib  gimliuses.bib  glossary.md  index.md  paper_carousel.py  references.bib  references.md
doc/_sphinx-ext/: pyvista_dirhtml_fix.py  srclinks.py
doc/_static/css/: custom.css
doc/_static/js/: init-tooltips.js
doc/_templates/: footer_end.html  footer_start.html  index.html  other_software.html  sidebar.html
doc/_templates/pybtex_plugins/: pybtexPGstylePlugin.py  setup.py
doc/about/: authors.md  citation.md  index.md  introduction.md  libgimli.bib
doc/community/: contribute.md  index.md  other-software.md  other_software.md
doc/community/development/: cheatsheet.md  guidelines.md  index.md
doc/doc/: repro_tips_beginner.rst
doc/examples/1_meshing/: plot_bert-logo.py  plot_cad_tutorial.py
doc/examples/2_seismics/: plot_01_refraction_manager.py  plot_03_rays_layered_and_gradient_models.py  plot_05_refraction_3D.py
doc/examples/3_ert/: plot_01_ert_2d_mod_inv.py  plot_02_ert_field_data.py  plot_03_ert_2_layer_mod.py  plot_04_ert_2_5d_potential.py  plot_05_ert_4_point_sensitivities.py  plot_06_ert_tree.py  plot_09_ert_timelapse.py  plot_10_reciprocal_analysis.py  plot_modTank3d.py
doc/examples/3_induced_polarization/: plot_06_complex_modeling.py  plot_07_simple_complex_inversion.py  plot_08_TDIPinversion.py
doc/examples/4_gravimetry_magnetics/: plot_01_mod-gravimetry-integration-2d.py  plot_05_inv-gravity-3d.py
doc/examples/5_flow_transport/: README.txt  plot_3D_Darcy_flow.py  plot_hydrogeophysical_modeling.py
doc/examples/6_inversion/: plot_2_additionalConstraintsVES.py  plot_3_petro_joint_inv.py  plot_4_structural_constraints.py  plot_5_ert_with_priors.py  plot_6_tem_with_resolution.py  plot_7_scci.py
doc/examples/7_ves/: README.txt  plot_01_ves_modelling_inversion.py
doc/paper/cg17/: example-2_visualization.py  index.rst
doc/tutorials/: README.txt
doc/tutorials/0_basics/: plot_1-gimli_basics.py
doc/tutorials/1_mesh/: plot_3-mesh.py  plot_6-mesh-quality-inspection.py
doc/tutorials/2_modelling/: plot_2-mod-fem.py  plot_3-mod-fem-BC.py  plot_5-mod-fem-heat-2d.py
doc/tutorials/3_inversion/: plot_1-polyfit.py  plot_2-dc1dblock.py  plot_5_Regularization.py  plot_6-geostatConstraints.py  plot_8-regionWise.py
doc/tutorials/4_visualization/: README.txt  plot_01_3d_visualization_pyvista.py
doc/user-guide/: data.md  fundamentals.md  index.md  inversion.md  meshes.md  modelling.md  visualization.md
doc/user-guide/advanced/: custom-fop.md  hpc-parallel.md  index.md  matrices.md
doc/user-guide/getting-started/: basics.md  first-inversion.md  first-modelling.md  how-to-continue.md  index.md  installation.md
pygimli/: CMakeLists.txt  __init__.py  _version.py  setup.py.in
pygimli/core/: __init__.py  base.py  config.py  core.py  datacontainer.py  decorators.py  lazyImport.py  load.py  logger.py  matrix.py  mesh.py  trans.py
pygimli/frameworks/: __init__.py  harmfit.py  inversion.py  linesearch.py  methodManager.py  modelling.py  resolution.py  scci.py  timelapse.py
pygimli/math/: bfgsmatrix.py  matrix.py
pygimli/meshtools/: __init__.py  example.xml  grid.py  mapping.py  mesh.py  polytools.py  quality.py
pygimli/physics/: __init__.py
pygimli/physics/SIP/: __init__.py  importData.py  models.py  plotting.py  sipspectrum.py  siptools.py  tools.py
pygimli/physics/em/: README.md  __init__.py  fdem.py  fdemmodelling.py  hemmodelling.py  io.py  mt1dmodelling.py  tdem.py  tools.py  vmd.py
pygimli/physics/ert/: __init__.py  crosshole.py  ert.py  ertIPManager.py  ertManager.py  ertModelling.py  ertScheme.py  importData.py  ipModelling.py  processing.py  timelapse.py  visualization.py
pygimli/physics/gravimetry/: GravityModelling.py  MagneticsModelling.py  __init__.py  blakely.py  gravMagModelling.py  kernel.py  magneticsManager.py  tools.py
pygimli/physics/petro/: modelling.py  resistivity.py
pygimli/physics/sNMR/: mrs.py  mrsprofile.py  plotting.py
pygimli/physics/seismics/: __init__.py
pygimli/solver/: green.py  leastsquares.py  solver.py  solverFiniteVolume.py  utils.py
pygimli/testing/: __init__.py  test_FEM.py  test_IO_PLC.py  test_IterBug.py  test_Logger.py  test_MeshGenerator.py  test_Misc.py  test_RValueConverter.py  test_XVector.py  test_misc.py  test_polytools.py  test_show.py
pygimli/utils/: __init__.py  base.py  cache.py  dem.py  gps.py  positioning.py  sparseMat2Numpy.py  streams.py  utils.py
pygimli/viewer/: showmesh.py
(+129 files in other folders)
